TaskTraverser/k8s/backend-demployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: tasktraverser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: jovanasiljanovska/tasktraverser-backend:latest
          ports:
            - containerPort: 5000
