TaskTraverser/k8s/frontend-demployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: tasktraverser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: jovanasiljanovska/tasktraverser-frontend:latest
          ports:
            - containerPort: 80
