TaskTraverser/k8s/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: tasktraverser
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
    
      containers:
      - name: postgres
        image: postgres:17
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: postgres-data
            mountPath: /var/lib/postgresql/data
          - name: init-sql
            mountPath: /init
        lifecycle:
          postStart:
            exec:
              command:
                - sh
                - -c
                - |
                  sleep 5
                  psql -U "$POSTGRES_USER" -d "$POSTGRES_DB" -f /init/init.sql


      volumes:
        - name: init-sql
          configMap:
            name: postgres-init-sql

  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
